--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,37 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.12</version>
+					<configuration>
+						<skipTests>False</skipTests>
+						<includes>
+							<include>**/BranchEmployeeInfoTests.java</include>
+						</includes>
+						<suiteXmlFiles>
+							<suiteXmlFile>src/test/resources/test-suites/${suiteXMLFile}.xml
+							</suiteXmlFile>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>2.3.2</version>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
